Enviando Prova Final

--- a/OincFarm/src/app/app.component.html
+++ b/OincFarm/src/app/app.component.html
@@ -9,6 +9,6 @@
         <router-outlet></router-outlet>
     </div>
     <div class="footer">
-        <p>&copy; 2024 Residência - Leandro Garcia. Todos os direitos reservados. <a href="#">Política de Privacidade</a> | <a href="#">Termos do serviço</a></p>
+        <p class="footerText">&copy; 2024 Residência - Feito por: Leandro Garcia <a href="https://github.com/leogmc">(github.com/leogmc)</a> & Lorena Andrade <a href="https://github.com/lorenaandradeba">(github.com/lorenaandradeba)</a></p>
     </div>
   </div>
