--- a/OincFarm/src/app/components/home/home.component.html
+++ b/OincFarm/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="menu">
         <button class="botao" id="cadastro" routerLink="/cadastrarSuino" routerLinkActive="active"> CADASTRO DE SUÍNO</button>
         <button class="botao" id="listagem" routerLink="/listarSuinos" routerLinkActive="active"> LISTAGEM DE SUÍNOS</button>
-        <button class="botao" id="monitoracao" routerLink="/cadastrarSuino" routerLinkActive="active"> MONITORAÇÃO DE PESO</button>
+        <button class="botao" id="monitoracao" routerLink="/menuPeso" routerLinkActive="active"> MONITORAÇÃO DE PESO</button>
     </div>
 </div>
 </div>
