--- a/OincFarm/src/app/components/pig-form/pig-form.component.css
+++ b/OincFarm/src/app/components/pig-form/pig-form.component.css
@@ -34,7 +34,7 @@
   margin-left: 75px;
 }
 
-.botao{
+.botao1{
   background-color: rgb(255, 255, 255);
   color: solid #8C4A4A;
   border-radius: 10px;
