--- a/OincFarm/src/app/app.component.css
+++ b/OincFarm/src/app/app.component.css
@@ -8,13 +8,11 @@
 
   .header{
     background-color: #8C4A4A;
-    box-shadow: 1px 40px 8px 2px rgba(0, 0, 0, 0.4); /* Sombra */
     height: 100px; 
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    box-sizing: border-box;
   }
 
   .logo :hover{
@@ -50,32 +48,41 @@
 
 
   .footer {
-    background-color: #f8f9fa;
-    border-top: 1px solid #dee2e6;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    background-color: #F2C4C8;
     padding: 20px 30px;
-    position:static;
+    position:relative;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 20px;
     text-align: center;
     box-sizing: border-box;
+  }
+
+  .footerText{
+    font-family:Arial, Helvetica, sans-serif;
+    color: #8C4A4A;
+    
   }
 
 
   
   .footer p {
     margin: 0;
-    color: #6c757d;
+  
   }
   
   .footer a {
-    color: #007bff;
+    color: #501b1b;
     text-decoration: none;
   }
   
   .footer a:hover {
-    color: #0056b3;
+    color: #be98ec;
   }
   
   p {
