--- a/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
+++ b/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
@@ -1,22 +1,37 @@
-<form [formGroup]="pesoForm" (ngSubmit)="submitPeso($event)">
-    <mat-form-field appearance="fill">
+<div class="content">
+<form class="formulario" [formGroup]="pesoForm" (ngSubmit)="submitPeso()">
+    <h2 class="titulo">Cadastrar peso</h2>
+    <br>
+    <mat-form-field appearance="outline" class="form">
          <mat-label>Selecione o Suíno</mat-label>
          <mat-select formControlName="brincoSuino">
              <mat-option *ngFor="let suino of suinos" [value]="suino.brinco">{{ suino.brinco }}</mat-option>
          </mat-select>
          <mat-error *ngIf="pesoForm.get('dataPesagem')?.touched && !isAnimalBrincoValid()">Escolha um suíno</mat-error>
-     </mat-form-field><br>
-     <mat-form-field appearance="fill">
+     </mat-form-field>
+     <br>
+     <br>
+
+     <mat-form-field appearance="outline" class="form">
          <mat-label>Data de Pesagem</mat-label>
          <input matInput [matDatepicker]="pickerPesagem" formControlName="dataPesagem">
          <mat-datepicker-toggle matSuffix [for]="pickerPesagem"></mat-datepicker-toggle>
          <mat-datepicker #pickerPesagem></mat-datepicker>
-         <mat-error *ngIf="pesoForm.get('dataPesagem')?.hasError('required')  && pesoForm.get('dataPesagem')?.touched">Campo obrigatório</mat-error>
-       </mat-form-field><br>
-     <mat-form-field appearance="fill">
+         <mat-error *ngIf="pesoForm.get('dataPesagem')?.hasError('required')  && pesoForm.get('dataPesagem')?.touched">* Campo obrigatório</mat-error>
+       </mat-form-field>
+       <br>
+       <br>
+
+     <mat-form-field appearance="outline" class="form">
          <mat-label>Peso</mat-label>
          <input matInput type="number" formControlName="pesoKg">
-         <mat-error *ngIf="pesoForm.get('pesoKg')?.hasError('required')  && pesoForm.get('pesoKg')?.touched">Campo obrigatório</mat-error>
-     </mat-form-field><br>
-     <button mat-raised-button color="primary" type="submit">Salvar</button>
+         <mat-error *ngIf="pesoForm.get('pesoKg')?.hasError('required')  && pesoForm.get('pesoKg')?.touched">* Campo obrigatório</mat-error>
+     </mat-form-field>
+     <br>
+     <br>
+
+     <button mat-raised-button color="primary" class="botao">Salvar</button>
  </form>
+
+
+</div>
