--- a/OincFarm/src/app/components/editar/editar.component.css
+++ b/OincFarm/src/app/components/editar/editar.component.css
@@ -1,32 +1,47 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 150vh;
-    margin: 0 auto;
-}
-mat-form-field{
-    gap: 10px;
-    margin-left: 5px !important;
-}
-
-#enviar {
-    margin: auto;
-    display: block; 
+.formulario {
+  border: solid 4px #652c2c;
+  background-color:#ffffff;
+  border-radius: 5px;
+  padding: 20px;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto; /* Define margens automáticas para alinhar o elemento ao centro horizontalmente */
+  text-align:start;
+  margin-top: 300px;
+  margin-bottom: 100px;
 }
 
-#enviar:hover {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    text-decoration: none;
+.form {
+  width: 100%;
 }
-#nomeAnimal {
-    width: 60%;
-    padding-right: 6px;
+
+.span{
+  font-size: smaller;
+  color: rgb(255, 88, 88);
+  margin-top: -20px;
 }
-#nomeTutor {
-    width: 65%;
-    padding-left: 6px;
+
+
+.titulo{
+  display: flex;
+  font-family:Arial, Helvetica, sans-serif;
+  color:#8C4A4A;
 }
+
+.sexo{
+margin-left: 75px;
+}
+
+.botao1{
+  background-color: rgb(255, 255, 255);
+  color: solid #8C4A4A;
+  border-radius: 10px;
+  width: 128px;
+  height: 40px;
+}
+
+mat-label{
+color: #8C4A4A;
+}
+
