--- a/OincFarm/src/app/components/listar-suinos/listar-suinos.component.css
+++ b/OincFarm/src/app/components/listar-suinos/listar-suinos.component.css
@@ -1,50 +1,17 @@
-.tickets-table {
-    width: 100%;
-    border-collapse: collapse;
-    box-sizing: border-box;
-    }
-    
-    .tickets-table th,
-    .tickets-table td {
-      padding: 15px;
-      text-align: left;
-      border-bottom: 1px solid #dee2e6;
-    }
-  
-    .tickets-table tr:hover {
-      background-color: #f8f9fa;
-    }
-    
-    .tickets-table th {
-      background-color: #f8f9fa;
-      color: #495057;
-    }
-  
-    #btnEditar{
-      background-color: #0074f0;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-left: 200px;
-      cursor: pointer;
-    }
+.titulo{
+  display: flex;
+  font-family:Arial, Helvetica, sans-serif;
+  color:#8C4A4A;
+}
 
-    #btnEditar:hover{
-      background-color: #004186;
-    }
+#btnEditar{
+  color:#8C4A4A;
+  background-color: #F2C4C8;
+  border: 1px solid #8C4A4A; 
+}
 
-    #btnDetalhes{
-      background-color: #0074f0;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #btnDetalhes:hover{
-      background-color: #004186;
-    }
+#btnExcluir{
+  color:#F2C4C8;;
+  background-color: #8C4A4A;
+  border: 1px solid #8C4A4A; 
+}
