--- a/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
+++ b/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
@@ -1,23 +1,73 @@
 <p *ngIf="loadedSuinos.length < 1">Não existem suínos cadastrados!</p>
-<!-- pig-list.component.html -->
-<div *ngIf="loadedSuinos.length >= 1">
-  <h2>Listagem de Suínos</h2>
-  <!-- Filtros -->
-  <div>
-    <!-- <label for="filtroBrincoPai">Filtrar por Brinco do Pai:</label>
-    <input type="text" id="filtroBrincoPai" [(ngModel)]="filtroBrincoPai"> -->
-    <!-- Outros filtros similares -->
-  </div>
 
-  <!-- Lista de Suínos -->
-  <div *ngFor="let suino of loadedSuinos">
-    <!-- Exibir os campos do suíno -->
-    <p>Brinco: {{ suino.brinco }}, Brinco do Pai: {{ suino.brincoPai }}, Brinco da Mãe: {{ suino.brincoMae }}, 
-    Data de Nascimento: {{ suino.dataNascimento }}, Data de Saída: {{ suino.dataSaida }}, Sexo: {{ suino.sexo }},
-    Status: {{ suino.status }}, Idade: {{ formatarData(suino.dataNascimento) | calcularIdade }}</p>
-    
-    <!-- Adicionar opções para editar e deletar -->
-    <!-- <button (click)="editarSuino(suino)">Editar</button>
-    <button (click)="deletarSuino(suino)">Deletar</button> -->
-  </div>
-</div>
+<div *ngIf="loadedSuinos.length >= 1">
+<h2 class="titulo">Listagem de Suínos</h2>
+<table mat-table [dataSource]="loadedSuinos" class="mat-elevation-z8">
+
+  
+  <ng-container matColumnDef="brinco">
+    <th mat-header-cell *matHeaderCellDef> Brinco</th>
+    <td mat-cell *matCellDef="let element"> {{element.brinco}} </td>
+  </ng-container>
+
+ 
+  <ng-container matColumnDef="brincoPai">
+    <th mat-header-cell *matHeaderCellDef> Brinco Pai </th>
+    <td mat-cell *matCellDef="let element"> {{element.brincoPai}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="brincoMae">
+    <th mat-header-cell *matHeaderCellDef> Brinco Mãe </th>
+    <td mat-cell *matCellDef="let element"> {{element.brincoMae}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="dataNascimento">
+    <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+    <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="dataSaida">
+    <th mat-header-cell *matHeaderCellDef> Data de Saída </th>
+    <td mat-cell *matCellDef="let element"> {{element.dataSaida}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sexo">
+    <th mat-header-cell *matHeaderCellDef> Sexo </th>
+    <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef> Status </th>
+    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="idade">
+    <th mat-header-cell *matHeaderCellDef> Idade </th>
+    <td mat-cell *matCellDef="let element"> {{ formatarData(element.dataNascimento) | calcularIdade }} </td>
+  </ng-container>
+
+   <!-- Coluna de ações -->
+   <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Ações </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button color="primary" id="btnEditar" routerLink="/editarSuino/{{element.id}}">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" id="btnExcluir" (click)="apagarSuino(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
+
+
+
+
+  
+
