--- a/OincFarm/src/app/components/pig-form/pig-form.component.html
+++ b/OincFarm/src/app/components/pig-form/pig-form.component.html
@@ -87,7 +87,7 @@
       
   <br>
     
-  <button mat-raised-button color="primary" class="botao" [disabled]="!exemploForm.valid">Enviar</button>
+  <button mat-raised-button color="primary" class="botao1" [disabled]="!exemploForm.valid">Enviar</button>
 
 </form>
 </div>
