listar e editar peso

--- a/OincFarm/src/app/components/menu-peso/menu-peso.component.html
+++ b/OincFarm/src/app/components/menu-peso/menu-peso.component.html
@@ -4,7 +4,7 @@
         <img src="../assets/OincFarm-logo.png" alt="Logo da OincFarm" width="500" height="200">
         </div>
         <div class="menu">
-            <button class="botao" id="cadastro" routerLink="/cadastrarPeso" routerLinkActive="active"> CADASTRO DE PESO</button>
+            <button class="botao" id="cadastro" routerLink="/listarPeso" routerLinkActive="active"> CADASTRO DE PESO</button>
             <button class="botao" id="listagem" routerLink="/controlePeso" routerLinkActive="active"> MONITORAÇÃO DE SUÍNOS</button>
         </div>
     </div>
