--- a/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
+++ b/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
@@ -59,7 +59,7 @@
             <mat-form-field>
                 <input matInput formControlName="pesoKg" placeholder="Peso em Kg" type="number">
                 <mat-error *ngIf="pesoForm.get('pesoKg')?.hasError('required')  && pesoForm.get('pesoKg')?.touched">Campo obrigatório</mat-error>
-            </mat-form-field>
+            </mat-form-field><br>
             <button mat-raised-button color="primary" (click)="onSaveClick()"
                 [disabled]="pesoForm.invalid">Salvar</button><br>
             <button mat-raised-button color="basic" (click)="onCancelClick()">Cancelar</button>
