--- a/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
+++ b/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.html
@@ -35,11 +35,13 @@
 
 
 </div> -->
-<h1 mat-dialog-title>{{ data.opcao === 'editar' ? 'Editar Peso' : 'Cadastrar Peso' }}</h1>
+
 <div class="form-container">
-    <form [formGroup]="pesoForm">
+    <form class="formulario" [formGroup]="pesoForm">
+        <h1 class="titulo" mat-dialog-title>{{ data.opcao === 'editar' ? 'Editar Peso' : 'Cadastrar Peso' }}</h1>
+
         <div class="form-group">
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <mat-label>Selecione o Suíno</mat-label>
                 <mat-select formControlName="brincoSuino">
                     <mat-option *ngFor="let suino of suinos" [value]="suino.brinco">{{ suino.brinco }}</mat-option>
@@ -47,22 +49,24 @@
                 <mat-error *ngIf="pesoForm.get('brincoSuino')?.touched && !pesoForm.get('brincoSuino')?.valid">Escolha um suíno</mat-error>
             </mat-form-field>
         </div>
+
         <div class="form-group">
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <input matInput [matDatepicker]="pickerPesagem" formControlName="dataPesagem" placeholder="Data da Pesagem">
                 <mat-datepicker-toggle matSuffix [for]="pickerPesagem"></mat-datepicker-toggle>
                 <mat-datepicker #pickerPesagem></mat-datepicker>
                 <mat-error *ngIf="pesoForm.get('dataPesagem')?.hasError('required')  && pesoForm.get('dataPesagem')?.touched">Campo obrigatório</mat-error>
             </mat-form-field>
         </div>
+
         <div class="form-group">
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <input matInput formControlName="pesoKg" placeholder="Peso em Kg" type="number">
                 <mat-error *ngIf="pesoForm.get('pesoKg')?.hasError('required')  && pesoForm.get('pesoKg')?.touched">Campo obrigatório</mat-error>
             </mat-form-field><br>
-            <button mat-raised-button color="primary" (click)="onSaveClick()"
-                [disabled]="pesoForm.invalid">Salvar</button><br>
-            <button mat-raised-button color="basic" (click)="onCancelClick()">Cancelar</button>
+            <button mat-raised-button color="primary" class="botao" (click)="onSaveClick()"
+                [disabled]="pesoForm.invalid">Salvar</button>
+            <button mat-raised-button color="basic" class="botao" (click)="onCancelClick()">Cancelar</button>
             </div>
     </form>
 
