--- a/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
+++ b/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
@@ -1,73 +1,98 @@
 <p *ngIf="loadedSuinos.length < 1">Não existem suínos cadastrados!</p>
 
 <div *ngIf="loadedSuinos.length >= 1">
-<h2 class="titulo">Listagem de Suínos</h2>
-<table mat-table [dataSource]="loadedSuinos" class="mat-elevation-z8">
+  <h2 class="titulo">Listagem de Suínos</h2>
 
+<!-- Filtros -->
+<div class="filtros">
+  <label for="filtroBrinco">Filtrar por Brinco:</label>
+  <input type="text" id="filtroBrinco" [(ngModel)]="filtroBrinco">
   
-  <ng-container matColumnDef="brinco">
-    <th mat-header-cell *matHeaderCellDef> Brinco</th>
-    <td mat-cell *matCellDef="let element"> {{element.brinco}} </td>
-  </ng-container>
+  <label for="filtroBrincoPai">Filtrar por Brinco do Pai:</label>
+  <input type="text" id="filtroBrincoPai" [(ngModel)]="filtroBrincoPai">
 
- 
-  <ng-container matColumnDef="brincoPai">
-    <th mat-header-cell *matHeaderCellDef> Brinco Pai </th>
-    <td mat-cell *matCellDef="let element"> {{element.brincoPai}} </td>
-  </ng-container>
+  <label for="filtroBrincoMae">Filtrar por Brinco da Mãe:</label>
+  <input type="text" id="filtroBrincoMae" [(ngModel)]="filtroBrincoMae">
 
-  <ng-container matColumnDef="brincoMae">
-    <th mat-header-cell *matHeaderCellDef> Brinco Mãe </th>
-    <td mat-cell *matCellDef="let element"> {{element.brincoMae}} </td>
-  </ng-container>
+  <label for="filtroDataNascimento">Filtrar por Data de Nascimento:</label>
+  <input type="text" id="filtroDataNascimento" [(ngModel)]="filtroDataNascimento">
 
-  <ng-container matColumnDef="dataNascimento">
-    <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-    <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
-  </ng-container>
+  <label for="filtroDataSaida">Filtrar por Data de Saída:</label>
+  <input type="text" id="filtroDataSaida" [(ngModel)]="filtroDataSaida">
 
-  <ng-container matColumnDef="dataSaida">
-    <th mat-header-cell *matHeaderCellDef> Data de Saída </th>
-    <td mat-cell *matCellDef="let element"> {{element.dataSaida}} </td>
-  </ng-container>
+  <label for="filtroSexo">Filtrar por Sexo:</label>
+  <select id="filtroSexo" [(ngModel)]="filtroSexo">
+    <option value="M">Macho</option>
+    <option value="F">Fêmea</option>
+  </select>
 
-  <ng-container matColumnDef="sexo">
-    <th mat-header-cell *matHeaderCellDef> Sexo </th>
-    <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
-  </ng-container>
+  <label for="filtroStatus">Filtrar por Status:</label>
+  <select id="filtroStatus" [(ngModel)]="filtroStatus">
+    <option value="Ativo">Ativo</option>
+    <option value="Vendido">Vendido</option>
+    <option value="Morto">Morto</option>
+  </select>
 
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="idade">
-    <th mat-header-cell *matHeaderCellDef> Idade </th>
-    <td mat-cell *matCellDef="let element"> {{ formatarData(element.dataNascimento) | calcularIdade }} </td>
-  </ng-container>
-
-   <!-- Coluna de ações -->
-   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Ações </th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="primary" id="btnEditar" routerLink="/editarSuino/{{element.id}}">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" id="btnExcluir" (click)="apagarSuino(element.id)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+  <button (click)="filtrarSuinos()">Aplicar Filtros</button>
+  <button (click)="limparFiltros()">Limpar Filtros</button>
+</div>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  <table mat-table [dataSource]="loadedSuinos" class="mat-elevation-z8">
+    <ng-container matColumnDef="brinco">
+      <th mat-header-cell *matHeaderCellDef> Brinco</th>
+      <td mat-cell *matCellDef="let element"> {{element.brinco}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="brincoPai">
+      <th mat-header-cell *matHeaderCellDef> Brinco Pai </th>
+      <td mat-cell *matCellDef="let element"> {{element.brincoPai}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="brincoMae">
+      <th mat-header-cell *matHeaderCellDef> Brinco Mãe </th>
+      <td mat-cell *matCellDef="let element"> {{element.brincoMae}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="dataNascimento">
+      <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+      <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="dataSaida">
+      <th mat-header-cell *matHeaderCellDef> Data de Saída </th>
+      <td mat-cell *matCellDef="let element"> {{element.dataSaida}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="sexo">
+      <th mat-header-cell *matHeaderCellDef> Sexo </th>
+      <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
+    </ng-container>
 
-  
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="idade">
+      <th mat-header-cell *matHeaderCellDef> Idade </th>
+      <td mat-cell *matCellDef="let element"> {{ formatarData(element.dataNascimento) | calcularIdade }} </td>
+    </ng-container>
+
+    <!-- Coluna de ações -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Ações </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="primary" id="btnEditar" routerLink="/editarSuino/{{element.id}}">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" id="btnExcluir" (click)="apagarSuino(element.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
