--- a/techpig/src/app/Pages/editar/editar.component.html
+++ b/techpig/src/app/Pages/editar/editar.component.html
@@ -1,7 +1,12 @@
 <form [formGroup]="editarForm" (ngSubmit)="editarSuino($event)" class="editarForm">
-<mat-form-field appearance="fill">
+  <mat-form-field appearance="fill">
+    <mat-label>Brinco</mat-label>
+    <input matInput formControlName="brinco" placeholder="Brinco">
+    <mat-error *ngIf="editarForm.get('brinco')?.hasError('required')">Campo obrigatório</mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
     <mat-label>Brinco do pai</mat-label>
-    <input matInput formControlName="brincoPai" placeholder="Brinco do pai" >
+    <input matInput formControlName="brincoPai" placeholder="Brinco do pai">
     <mat-error *ngIf="editarForm.get('brincoPai')?.hasError('required')">Campo obrigatório</mat-error>
     <mat-error *ngIf="editarForm.get('brincoPai')?.hasError('pattern')">Por favor, insira um número válido</mat-error>
   </mat-form-field>
@@ -11,7 +16,7 @@
     <mat-error *ngIf="editarForm.get('brincoMae')?.hasError('required')">Campo obrigatório</mat-error>
     <mat-error *ngIf="editarForm.get('brincoMae')?.hasError('pattern')">Por favor, insira um número válido</mat-error>
   </mat-form-field>
-<br>
+  <br>
   <mat-form-field appearance="fill">
     <mat-label>Data de Nascimento</mat-label>
     <input matInput [matDatepicker]="pickerNascimento" formControlName="dataNascimento">
@@ -25,7 +30,7 @@
     <mat-datepicker-toggle matSuffix [for]="pickerSaida"></mat-datepicker-toggle>
     <mat-datepicker #pickerSaida></mat-datepicker>
   </mat-form-field>
-<br>
+  <br>
   <mat-form-field appearance="fill">
     <mat-label>Status</mat-label>
     <mat-select formControlName="status">
@@ -35,7 +40,7 @@
     </mat-select>
     <mat-error *ngIf="editarForm.get('status')?.hasError('required')">Campo obrigatório</mat-error>
   </mat-form-field>
-<br>
+  <br>
   <mat-form-field appearance="fill">
     <mat-label>Sexo</mat-label>
     <mat-select formControlName="sexo">
@@ -46,4 +51,3 @@
   </mat-form-field><br>
   <button mat-raised-button id="enviar" color="primary" type="submit">Enviar</button>
 </form>
-
