--- a/OincFarm/src/app/components/pig-form/pig-form.component.css
+++ b/OincFarm/src/app/components/pig-form/pig-form.component.css
@@ -35,7 +35,7 @@
 }
 
 .botao1{
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: solid #8C4A4A;
   border-radius: 10px;
   width: 100px;
