--- a/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.css
+++ b/OincFarm/src/app/components/cadastro-peso/cadastro-peso.component.css
@@ -32,7 +32,7 @@
 
 
 .botao{
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: solid #8C4A4A;
   border-radius: 10px;
   width: 100px;
