--- a/OincFarm/src/app/components/cadastro-sessao/cadastro-sessao.component.css
+++ b/OincFarm/src/app/components/cadastro-sessao/cadastro-sessao.component.css
@@ -5,42 +5,43 @@
     border-radius: 5px;
     padding: 20px;
     min-width: 150px;
-    max-width: 500px;
+    max-width: 800px;
     width: 100%;
     margin: 0 auto; /* Define margens automáticas para alinhar o elemento ao centro horizontalmente */
     text-align:start;
     margin-top: 60px;
     margin-bottom: 30px;
-    text-align:center;
   }
-
-  .form {
-    width: 100%;
-  }
-
-  .span{
-    font-size: smaller;
-    color: rgb(255, 88, 88);
-    margin-top: -20px;
-  }
-
 
 .titulo{
-    display: flex;
     font-family:Arial, Helvetica, sans-serif;
     color:#8C4A4A;
 }
 
-
-.botao{
-  background-color: white;
-  color: solid #8C4A4A;
-  border-radius: 10px;
-  width: 128px;
-  height: 40px;
+.label{
+  width: 100%;
 }
 
-mat-label{
-  color: #8C4A4A;
+.label-suino, .label-atividade{
+width: 80%;
 }
 
+.botao-adicionar{
+  border: none;
+  border-radius: 5px;
+  background-color: #8C4A4A;
+  color: #ffffff;
+  font-size: larger;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.botao-adicionar:hover{
+  background-color: #652c2c;
+}
+
+.span{
+  margin-left: 5px;
+  margin-top: -15px;
+}
