--- a/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
+++ b/OincFarm/src/app/components/listar-suinos/listar-suinos.component.html
@@ -1,44 +1,54 @@
+<div class="content">
 <p *ngIf="loadedSuinos.length < 1">Não existem suínos cadastrados!</p>
 
 <div *ngIf="loadedSuinos.length >= 1">
   <h2 class="titulo">Listagem de Suínos</h2>
 
+<h3 class="titulo">Filtrar por:</h3>
 <!-- Filtros -->
 <div class="filtros">
-  <label for="filtroBrinco">Filtrar por Brinco:</label>
-  <input type="text" id="filtroBrinco" [(ngModel)]="filtroBrinco">
-  
-  <label for="filtroBrincoPai">Filtrar por Brinco do Pai:</label>
-  <input type="text" id="filtroBrincoPai" [(ngModel)]="filtroBrincoPai">
 
-  <label for="filtroBrincoMae">Filtrar por Brinco da Mãe:</label>
-  <input type="text" id="filtroBrincoMae" [(ngModel)]="filtroBrincoMae">
+  <label id="lb1" for="filtroBrincoPai">Brinco do Pai:</label>
+  <input class="label" type="text" id="filtroBrincoPai" [(ngModel)]="filtroBrincoPai">
 
-  <label for="filtroDataNascimento">Filtrar por Data de Nascimento:</label>
-  <input type="text" id="filtroDataNascimento" [(ngModel)]="filtroDataNascimento">
+  <label id="lb2" for="filtroDataNascimento">Data de Nascimento:</label>
+  <input class="label" type="text" id="filtroDataNascimento" [(ngModel)]="filtroDataNascimento">
 
-  <label for="filtroDataSaida">Filtrar por Data de Saída:</label>
-  <input type="text" id="filtroDataSaida" [(ngModel)]="filtroDataSaida">
-
-  <label for="filtroSexo">Filtrar por Sexo:</label>
+  <label id="lb3" class="label" for="filtroSexo">Sexo:</label>
   <select id="filtroSexo" [(ngModel)]="filtroSexo">
     <option value="M">Macho</option>
     <option value="F">Fêmea</option>
   </select>
 
-  <label for="filtroStatus">Filtrar por Status:</label>
+  <br>
+  <br>
+
+  <label id="lb4" for="filtroBrincoMae">Brinco da Mãe:</label>
+  <input class="label" type="text" id="filtroBrincoMae" [(ngModel)]="filtroBrincoMae">
+
+  <label id="lb5" for="filtroDataSaida">Data de Saída:</label>
+  <input class="label" type="text" id="filtroDataSaida" [(ngModel)]="filtroDataSaida">
+
+  
+
+  <label id="lb6" for="filtroStatus">Status:</label>
   <select id="filtroStatus" [(ngModel)]="filtroStatus">
     <option value="Ativo">Ativo</option>
     <option value="Vendido">Vendido</option>
     <option value="Morto">Morto</option>
   </select>
 
-  <button (click)="filtrarSuinos()">Aplicar Filtros</button>
-  <button (click)="limparFiltros()">Limpar Filtros</button>
+  <br>
+  <br>
+  <button class="botao" id="botaoFiltrar" (click)="filtrarSuinos()">Aplicar Filtros</button>
+  <button class="botao" id="botaoLimpar" (click)="limparFiltros()">Limpar Filtros</button>
 </div>
+<br>
+
+<!-- Tabela -->
 
 
-  <table mat-table [dataSource]="loadedSuinos" class="mat-elevation-z8">
+  <table mat-table [dataSource]="filteredSuinos" class="mat-elevation-z8">
     <ng-container matColumnDef="brinco">
       <th mat-header-cell *matHeaderCellDef> Brinco</th>
       <td mat-cell *matCellDef="let element"> {{element.brinco}} </td>
@@ -95,4 +105,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
 </div>
